fixed horizontal scrolling showing white space on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@ html {
 
 body {
   overscroll-behavior: contain;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+
+
 }
 
 
